modules/gdscript/tests/scripts/parser/errors/static_abstract_func.gd
extends RefCounted

abstract class A:
	# Currently, an abstract function cannot be static.
	static abstract func f()

func test():
	pass
